name:                day6-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jecxjo/day6-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff Parent
maintainer:          jeff@commentedcode.org
copyright:           Copyright 2018 Jeff Parent
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day6-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
